kubernets/node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node
  labels:
    app: node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node
        image: 496176876844.dkr.ecr.us-east-1.amazonaws.com/node:latest
      imagePullSecrets:
        - name: awsecr-cred
---

apiVersion: v1
kind: Service
metadata:
  name: node
spec:
  selector:
    app: node
  ports:
  - name: node
    protocol: TCP
    port: 8000
    targetPort: 8000
